# rust_bevy_getstarted

./: Cargo.toml  README.md
assets/level/lvl_data/: level_1.ron
src/: main.rs  states.rs
src/background/: background.rs  game_background.rs  nebuleuse.rs  star.rs
src/entity/: entity.rs  entity_manager.rs  player.rs  player_attack.rs  player_capabilities.rs  screen.rs
src/entity/enemy/: basic.rs
src/entity/player/: player_attack.rs  player_capabilities.rs  player_character.rs
src/level/: level_manager.rs
src/menu/: menu_element.rs
src/plugin/: background.rs  game.rs  level_manager.rs  main_menu.rs  paused.rs
src/state/: game.rs  main_menu.rs  menu_element.rs  paused.rs  states.rs
src/states/: game.rs  main_menu.rs  menu_element.rs  paused.rs  states.rs
