[package]
name = "bevy"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.12.1"
bevy_ron = "0.1.3"
serde = {version = "1", features = ["derive"]}
time = "0.3.30"
rand = "0.8.5"